--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -1,7 +1,7 @@
 
 nav{
-    background-color:  rgba(255, 230, 0, 0.6);
-    backdrop-filter: blur(5px);
+    background-color:  rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(30%);
     height: 50px;
     width: 100%;
 
@@ -22,15 +22,16 @@ nav ul li {
 }
 nav ul li a {
     text-decoration: none;
-    color: #fa00f2;
+    color: #ffffff;
     font-size: 20px;
 }
 
 nav ul li a:hover {
-    color: #ff0000;
+    color: #000000;
 }
 a.active {
-    background-color: #fa00f2;
+    background-color:  #ff00d999;
+    
     color: #ffffff;
     border-radius: 30%;
 }
