--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -1,17 +1,18 @@
 
 nav{
-    background-color:  rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(30%);
+    background-color:  rgba(68, 65, 65, 0.6);
+    backdrop-filter: blur(100%);
     height: 50px;
     width: 100%;
 
 }
-nav ul {
-float: right;
-margin-right: 40px;
 
-
+nav ul li a.active:hover {
+    color: #ffffff;
+    background-color:  #ff00d999;
+    border-radius: 30%;
 }
+
 
 nav ul li {
     list-style: none;
@@ -27,7 +28,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #000000;
+    color: #4AA0DE;
 }
 a.active {
     background-color:  #ff00d999;
@@ -35,3 +36,19 @@ a.active {
     color: #ffffff;
     border-radius: 30%;
 }
+h1{
+    color: #4AA0DE;
+    text-align: center;
+    font-size: 50px;
+    margin-top: 20px;
+    font-family: "Tektur", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+  font-style: normal;
+  font-variation-settings:"wdth" 100;
+}
+body{
+  color: white;
+  background-color:black ;
+      
+  }
