--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -4,6 +4,11 @@ nav{
     backdrop-filter: blur(100%);
     height: 50px;
     width: 100%;
+    position: sticky;
+   
+    top: 0;
+    overflow: hidden;
+    
 
 }
 
@@ -18,7 +23,7 @@ nav ul li {
     list-style: none;
     display: inline-block;
     margin-right: 20px;
-    margin-top: 10px;
+    margin-top: 0px;
 
 }
 nav ul li a {
@@ -46,9 +51,35 @@ h1{
     font-weight: 600;
   font-style: normal;
   font-variation-settings:"wdth" 100;
-}
+} 
+
+h2{
+    color: #af2396;
+    text-align: center;
+    font-size: 30px;
+    margin-top: 20px;
+    font-family: "Arimo", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+  font-style: normal;
+  font-variation-settings:"wdth" 50;
+    
+  }
 body{
-  color: white;
+  color: rgb(245, 240, 240);
   background-color:black ;
+  font-size: 20px;
       
   }
+ .centreimage{
+    display: block;
+    margin: auto;
+    width: 20%;
+  }
+footer{
+    background-color:  rgba(68, 65, 65, 0.6);
+    position: relative;
+    bottom: -20px; 
+
+  }
+ 
