--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -2,12 +2,14 @@
 nav{
     background-color:  rgba(68, 65, 65, 0.6);
     backdrop-filter: blur(100%);
-    height: 50px;
+    height: 100%;
     width: 100%;
     position: sticky;
    
     top: 0;
     overflow: hidden;
+    display: flex;
+    flex-direction: row;
     
 
 }
