--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -1,7 +1,8 @@
 
 nav{
-    background-color:  rgba(68, 65, 65, 0.6);
-    backdrop-filter: blur(100%);
+    background-color:  rgba(68, 65, 65, 0.7);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     height: 100%;
     width: 100%;
     position: sticky;
