--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -1,41 +1,46 @@
 
-nav{
-    background-color:  rgba(68, 65, 65, 0.7);
+nav.top-nav{
+   
+    background-color: rgba(68, 65, 65, 0.7);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    height: 100%;
+    height: 60px;  /* NOT 100% */
     width: 100%;
     position: sticky;
-   
     top: 0;
-    overflow: hidden;
     display: flex;
     flex-direction: row;
-    
+    align-items: center;
+    z-index: 999;
 
 }
+nav.top-nav ul {
+  display: flex;
+  margin: 0;
+  padding: 0 1rem;
+}
 
-nav ul li a.active:hover {
+nav.top-nav ul li a.active:hover {
     color: #ffffff;
     background-color:  #ff00d999;
     border-radius: 30%;
 }
 
 
-nav ul li {
+nav.top-nav ul li {
     list-style: none;
     display: inline-block;
     margin-right: 20px;
     margin-top: 0px;
 
 }
-nav ul li a {
+nav.top-nav ul li a {
     text-decoration: none;
     color: #ffffff;
     font-size: 20px;
 }
 
-nav ul li a:hover {
+nav.top-nav ul li a:hover {
     color: #4AA0DE;
 }
 a.active {
