added all info to blog and layout text

--- a/blogsfolder/blogsstyles.css
+++ b/blogsfolder/blogsstyles.css
@@ -32,6 +32,7 @@
     overflow-y: auto;
     max-height: 80vh;
     padding-right: 1rem;
+    background-color: rgba(0,0,0,0.7);
   }
   
   /* Optional: Scrollbar Styling */
