--- a/blogsfolder/blogsstyles.css
+++ b/blogsfolder/blogsstyles.css
@@ -44,4 +44,37 @@
     background-color: #ccc;
     border-radius: 3px;
   }
+  @media (max-width: 768px) {
+    .layout {
+      grid-template-columns: 1fr;
+    }
+  
+    .blog-nav ul {
+      background-color: rgb(49, 52, 52);
+      padding: 1rem;
+    }
+  
+    .blog-nav {
+      order: 1;
+    }
+  
+    .blog-content {
+      order: 2;
+      max-height: none;
+    }
+  }
+  @media (max-width: 768px) {
+    body {
+      font-size: 1.1rem;
+    }
+  
+    .blog-nav a {
+      font-size: 1rem;
+    }
+  
+    .blog-content {
+      font-size: 1rem;
+    }
+  }
+    
   
