--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -84,10 +84,23 @@ body{
     margin: auto;
     width: 20%;
   }
+  
 footer{
-    background-color:  rgba(68, 65, 65, 0.6);
+    background-color:  rgba(233, 225, 225, 0.6);
     position: relative;
     bottom: -20px; 
 
   }
+
+  
+  footer a {
+    color: #ff00d9;
+    text-decoration: none;
+    margin: 0 0.5rem;
+  }
+  
+  footer a:hover {
+    color: #4AA0DE;
+  }
+  
  
