changed main css template one. altered links colour

--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -91,7 +91,11 @@ footer{
     bottom: -20px; 
 
   }
-
+  a:link,
+  a:visited {
+    color: #ff00d999; 
+   
+  }
   
   footer a {
     color: #ff00d9;
