fixed spelling mistake in blogs

--- a/profilefolder/profilestyle.css
+++ b/profilefolder/profilestyle.css
@@ -53,7 +53,7 @@
 
 .tech-logos figcaption {
   font-size: 16px;
-  color: #ff00d999; /* Change this to whatever color you want */
+  color: #ff00d999;
   margin-top: 10px;
   font-family: "Arimo", sans-serif;
   font-weight: 600;
