--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -90,6 +90,20 @@ body {
   margin: auto;
   width: 20%;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1; /* allows the main content to take up remaining space */
+}
 
 footer {
   background-color: rgba(233, 225, 225, 0.6);
