--- a/testing/style.css
+++ b/testing/style.css
@@ -16,7 +16,7 @@ canvas {
 button {
     position: absolute;
     top: 20px;
-    left: 20px;
+    left: 200px;
     padding: 10px 20px;
     background-color: rgba(255, 255, 255, 0.5);
     border: none;
@@ -24,6 +24,9 @@ button {
     font-size: 16px;
     cursor: pointer;
     z-index: 10;
+}
+a flower{
+left:200px;
 }
 
 button:hover {
