--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -23,7 +23,7 @@ nav.top-nav ul li {
 nav.top-nav ul li a {
   text-decoration: none;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 40px;
 }
 
 nav.top-nav ul li a:hover {
@@ -79,6 +79,9 @@ body {
   color: rgb(245, 240, 240);
   background-color: black;
   font-size: 20px;
+   display: flex;
+  flex-direction: column;
+  font-family: "Arimo", sans-serif;
 }
 
 .tech-logos {
@@ -96,10 +99,7 @@ html, body {
   padding: 0;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-}
+
 
 main {
   flex: 1; /* allows the main content to take up remaining space */
