--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -98,7 +98,7 @@ h2 {
 body {
   color: rgb(245, 240, 240);
   background-color: black;
-  font-size: 20px;
+  font-size: 1rem;
    display: flex;
   flex-direction: column;
   font-family: "Arimo", sans-serif;
@@ -273,6 +273,9 @@ height: 250px;
     flex-direction: row; 
     align-items: center; 
     justify-content: flex-start;
+  }
+  .body{
+     font-size: 1.3rem;
   }
 }
 
