--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -194,7 +194,27 @@ height: 250px;
     transform: translateX(0);
   }
 }
+.backToTop{
+    position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 14px;
+  font-size: 16px;
+  background-color: #000000;
+  color:#ff00d999;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  display: none;
+  z-index: 1000;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  transition: opacity 0.3s ease;
 
+}
+
+#backToTop:hover {
+  background-color: #ff00d999;
+}
 /* --- MOBILE STYLES --- */
 @media (max-width: 768px) {
   nav.top-nav {
