--- a/designfolder/designstyle.css
+++ b/designfolder/designstyle.css
@@ -79,10 +79,7 @@
 .timeline-block.left .timeline-marker {
   right: -7px;
 }
-.timeline-block.right.expanded {
-  width: 80% !important;
-  transition: width 0.4s ease;
-}
+
 .timeline-block.left.expanded {
   width: 80% !important;
   transform: translateX(-30%);
@@ -127,7 +124,7 @@
   margin-top: 0.5rem;
   background: none;
   border: none;
-  color: #0070f3;
+  color: #4AA0DE;
   font-weight: 600;
   cursor: pointer;
   padding: 0;
@@ -154,6 +151,7 @@
 color: #ff00d9;
 background-color: black;
 border-radius: 20px;
+cursor: pointer;
 }
 
 .scroll-inner-top:hover {
@@ -161,32 +159,6 @@ border-radius: 20px;
   color: black;
 }
 
-/* Responsive stacking */
-/* @media (max-width: 768px) {
-  .timeline-block,
-  .timeline-block.left,
-  .timeline-block.right {
-    width: 100%;
-    padding-left: 3rem;
-    padding-right: 3rem;
-    text-align: left;
-  }
-
-  .timeline-block .timeline-content {
-    margin: 0 auto;
-  }
-
-  .timeline-block .timeline-marker {
-    left: calc(50% - 7px);
-    right: auto;
-  }
-
-  .timeline-line {
-    left: 50%;
-    transform: translateX(-50%);
-  }
-} */
- 
 
 @media (min-width: 769px) {
 .timeline-block.expanded {
@@ -214,6 +186,7 @@ border-radius: 20px;
   .timeline-block.right.expanded {
     width: 100% !important;
     transform: none !important;
+      transform: translateX(10%);
   }
   .timeline-block.expanded {
     width: 100% !important; /*  Force full width on mobile */
@@ -221,7 +194,7 @@ border-radius: 20px;
   }
 
   .timeline-content {
-    width: 100%;
+     max-width: 90%;
     box-sizing: border-box;
     padding: 1rem;
     background-color: rgba(255, 255, 255, 0.05);
