--- a/stylefolder/navbar.css
+++ b/stylefolder/navbar.css
@@ -126,27 +126,46 @@ html, body {
 main {
   flex: 1; /* allows the main content to take up remaining space */
 }
-
 footer {
-  background-color: rgba(233, 225, 225, 0.6);
-  position: relative;
-  bottom: -20px;
+  background-color: rgba(68, 65, 65, 0.95);
+  padding: 1rem 2rem;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
 }
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.footer-icons a {
+  margin: 0 0.5rem;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+  transition: transform 0.3s ease;
+  filter: grayscale(1);
+}
+
+.icon:hover {
+  transform: scale(1.2);
+  filter: grayscale(0);
+}
+
 
 a:link,
 a:visited {
   color: #ff00d999;
 }
 
-footer a {
-  color: #ff00d9;
-  text-decoration: none;
-  margin: 0 0.5rem;
-}
 
-footer a:hover {
-  color: #4AA0DE;
-}
 #typed-blog {
   white-space: pre-line; /* This preserves newlines and paragraphs */
 }
